--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/form";
 
 @import "layout/footer";
+@import "layout/navigation";
 @import "layout/header";
 @import "layout/grid";
 
